# use-computer-python

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: _1_hello_macos.py  _2_hello_ios.py  _3_recording.py  _4_file_transfer.py  _5_keepalive.py  _6_hello_tvos.py  ios_quickstart.py  quickstart.py  setup_with_exec.py  test.py  upload_file.py
mmini/: __init__.py  aio.py  ax_transpile.py  client.py  display.py  errors.py  keyboard.py  models.py  mouse.py  parsers.py  recording.py  retry.py  sandbox.py  screenshot.py  seed.py  tasks.py  test_ax_transpile.py
mmini/ios/: __init__.py  apps.py  environment.py  input.py
mmini/macos/: __init__.py  keyboard.py  mouse.py
mmini/tasks/: __init__.py
mmini/tasks/templates/: pre_command.sh  test_ios.sh  test_macos.sh  test_macos_check.sh
tests/: test_integration.py
use_computer/: __init__.py  accessibility.py  ax_transpile.py  client.py  display.py  errors.py  models.py  parsers.py  recording.py  retry.py  sandbox.py  screenshot.py  simulators.py  test_ax_transpile.py  test_simulators.py  vision.py
use_computer/ios/: __init__.py  apps.py  environment.py  input.py
use_computer/macos/: __init__.py  keyboard.py  mouse.py
use_computer/tasks/: __init__.py
use_computer/tasks/templates/: task.toml  test_ios_nograder.sh  test_macos_nograder.sh
