[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mmini"
version = "0.1.0"
description = "Python SDK for mmini — macOS Computer Use API"
requires-python = ">=3.10"
dependencies = ["httpx[http2]>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["mmini"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
