[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "use-computer"
version = "0.0.2"
description = "Python SDK for the use.computer macOS and iOS Computer Use API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "use.computer" }]
dependencies = ["httpx>=0.27"]
keywords = ["computer-use", "macos", "ios", "automation", "sandbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "pre-commit>=4",
    "pytest>=9",
    "ruff>=0.15",
    "twine>=6",
    "ty>=0.0.34",
]

[project.urls]
Homepage = "https://use.computer"
Documentation = "https://api.use.computer/docs"
Repository = "https://github.com/josancamon19/use-computer-python"

[tool.hatch.build.targets.wheel]
packages = ["use_computer"]

[tool.hatch.build]
exclude = [
    "/.github",
    "/.pytest_cache",
    "/.ruff_cache",
    "/.venv",
    "/dist",
    "/results",
    "/use_computer/test_*.py",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
